--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activity_Main"
+            android:name=".ui.activities.Activity_Main"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme">
@@ -25,56 +25,56 @@
         <activity
             android:name=".ui.activities.Activity_CreateHomework"
             android:label="New Homework"
-            android:parentActivityName=".Activity_Main"
+            android:parentActivityName=".ui.activities.Activity_Main"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustResize"
             tools:targetApi="jelly_bean">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Activity_Main" />
+                android:value=".ui.activities.Activity_Main" />
         </activity>
         <activity
             android:name=".ui.activities.Activity_CreateSubject"
             android:label="New Subject"
-            android:parentActivityName=".Activity_Main"
+            android:parentActivityName=".ui.activities.Activity_Main"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustResize"
             tools:targetApi="jelly_bean">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Activity_Main" />
+                android:value=".ui.activities.Activity_Main" />
         </activity>
         <activity
             android:name=".ui.activities.Activity_CreateExam"
             android:label="New Exam"
-            android:parentActivityName=".Activity_Main"
+            android:parentActivityName=".ui.activities.Activity_Main"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustResize"
             tools:targetApi="jelly_bean">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Activity_Main" />
+                android:value=".ui.activities.Activity_Main" />
         </activity>
         <activity android:name=".ui.activities.Activity_ModifyDay"
             android:label="Modify Day"
-            android:parentActivityName=".Activity_Main"
+            android:parentActivityName=".ui.activities.Activity_Main"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustResize"
             tools:targetApi="jelly_bean" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Activity_Main" />
+                android:value=".ui.activities.Activity_Main" />
         </activity>
         <activity
             android:name=".ui.activities.Activity_Settings"
             android:label="Settings"
-            android:parentActivityName=".Activity_Main"
+            android:parentActivityName=".ui.activities.Activity_Main"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustResize"
             tools:targetApi="jelly_bean">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Activity_Main" />
+                android:value=".ui.activities.Activity_Main" />
         </activity>
     </application>
 
