--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,45 +29,46 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     //Support libraries
-    compile "com.android.support:support-v4:$supportLibs_version"
-    compile "com.android.support:appcompat-v7:$supportLibs_version"
-    compile "com.android.support:design:$supportLibs_version"
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "com.android.support:support-v4:$supportLibs_version"
+    implementation "com.android.support:appcompat-v7:$supportLibs_version"
+    implementation "com.android.support:design:$supportLibs_version"
+    implementation "com.android.support.constraint:constraint-layout:1.0.2"
+    implementation "com.android.support:cardview-v7:$supportLibs_version"
 
     //Kotlin
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
     //Lifecycle
-    compile "android.arch.lifecycle:extensions:$lifecycle_version"
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     kapt "android.arch.lifecycle:compiler:$lifecycle_version"
 
     //Room persistence Library
-    compile "android.arch.persistence.room:runtime:$room_version"
+    implementation "android.arch.persistence.room:runtime:$room_version"
     kapt "android.arch.persistence.room:compiler:$room_version"
 
     //Butter Knife
-    compile "com.jakewharton:butterknife:$butterknife_version"
+    implementation "com.jakewharton:butterknife:$butterknife_version"
     kapt "com.jakewharton:butterknife-compiler:$butterknife_version"
 
     //Dagger 2
-    compile "com.google.dagger:dagger:$dagger_version"
+    implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
     // RxJava support for Room
-    compile "android.arch.persistence.room:rxjava2:$rxjava_version"
+    implementation "android.arch.persistence.room:rxjava2:$rxjava_version"
 
     //Color Picker
-    compile 'com.github.eltos:simpledialogfragment:2.1'
+    implementation 'com.github.eltos:simpledialogfragment:2.1'
 
     //Testing support
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
-    androidTestCompile "android.arch.core:core-testing:$rxjava_version"
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation "android.arch.core:core-testing:$rxjava_version"
 
-    androidTestCompile "com.android.support:support-compat:$supportLibs_version"
-    androidTestCompile "com.android.support:support-annotations:$supportLibs_version"
+    androidTestImplementation "com.android.support:support-compat:$supportLibs_version"
+    androidTestImplementation "com.android.support:support-annotations:$supportLibs_version"
 
+    testImplementation 'junit:junit:4.12'
 
-    testCompile 'junit:junit:4.12'
 }
 repositories {
     mavenCentral()
