--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,10 @@ buildscript {
     //Version numbers of dependencies
     ext {
         kotlin_version = "1.1.4-3"
-        supportLibs_version = "26.0.2"
-        lifecycle_version = "1.0.0-alpha9"
-        room_version = "1.0.0-alpha9"
-        rxjava_version = "1.0.0-alpha9"
+        supportLibs_version = "26.1.0"
+        lifecycle_version = "1.0.0-alpha9-1"
+        room_version = "1.0.0-alpha9-1"
+        rxjava_version = "1.0.0-alpha9-1"
         gradle_version = "2.3.3"
         butterknife_version = "8.6.0"
         dagger_version = "2.11"
