--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
 
     //Version numbers of dependencies
     ext {
-        kotlin_version = "1.1.4-3"
+        kotlin_version = "1.1.51"
         supportLibs_version = "26.1.0"
         lifecycle_version = "1.0.0-alpha9-1"
         room_version = "1.0.0-alpha9-1"
